# arbitrary-token-transfers

./: .env.evm-test.sample  .gitignore  .gitmodules  .mocharc.json  .pnp.cjs  .prettierignore  .yarnrc.yml  Anchor.toml  Cargo.toml  Protocol-overview.md  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci_test.yaml
connect/definitions/: package.json  tsconfig.json
connect/definitions/src/: automatic.ts  consts.ts  index.ts  layout.ts  testnet-tokens.json  tokens.ts  types.ts
connect/route/: package.json  tsconfig.json
connect/route/src/: route.ts
deployment/: .gitignore  README.md  deployment-playbook.md  package.json  tsconfig.json
deployment/config/: config.types.ts  read-configuration.ts  verification-api-keys.sample.json
deployment/config/devnet/: contracts.json  ecosystem.json  solana-tbr-init.json
deployment/config/localnet/: chains.json  contracts.json  dependencies.json  ecosystem.json  solana-tbr-init.json  tbr-v3.json
deployment/config/mainnet/: chains.json  contracts.json  dependencies.json  ecosystem.json  solana-tbr-init.json  tbr-v3.json
deployment/config/testnet/: chains.json  contracts.json  dependencies.json  ecosystem.json  solana-tbr-init.json  tbr-v3.json  verification-api-keys.json
deployment/ethers-contracts/: AccessControl.ts  IAllowanceTransfer.ts  IEIP712.ts  IPermit2.ts  IPriceOracle.ts  ISignatureTransfer.ts  ITokenBridge.ts  IWETH.ts  PriceOracle.ts  PriceOracleConfig.ts  PriceOracleDispatcher.ts  PriceOracleIntegration.ts  PriceOraclePrices.ts  ProxyBase.ts  RawDispatcher.ts  Receiver.ts  Tbr.ts  TbrBase.ts  TbrConfig.ts  TbrDispatcher.ts  TbrExposer.ts  TbrTestBase.ts  TbrUser.ts  Upgrade.ts  UpgradeTester.ts  index.ts
deployment/ethers-contracts/Base.t.sol/: BaseTest.ts
deployment/ethers-contracts/ConfigTest.t.sol/: ConfigTest.ts  index.ts
deployment/ethers-contracts/Dispatcher.t.sol/: DispatcherTest.ts  index.ts
deployment/ethers-contracts/OracleIntegration.t.sol/: OracleIntegrationTest.ts  index.ts
deployment/ethers-contracts/Permit2Parsing.t.sol/: Permit2ParsingTest.ts  index.ts
deployment/ethers-contracts/TokenBridgeVAAParser.t.sol/: TokenBridgeVAAParserTest.ts  index.ts
deployment/ethers-contracts/User.t.sol/: UserTest.ts  index.ts
deployment/evm/: config.types.ts  configure-fee-and-dropoff.ts  configure-peers.ts  deploy-implementation.ts  deploy.ts  parse.ts  playbook.md  query-balance.sh  read-configured-fee-and-dropoff.ts  register-peers.ts  sample.env  set-canonical-peer.ts  test-transfer.ts  unpause-transfer.ts  upgrade.ts  verify.ts
deployment/helpers/: env.ts  evm.ts  index.ts  interfaces.ts  solana.ts  utils.ts
deployment/solana/: add-admin.ts  analyze-fees.ts  configure-fee-and-dropoff.ts  configure.ts  deploy-playbook.md  initialize.ts  read-config.ts  read-configuration.ts  register-peers.ts  remove-admin.ts  sample.env  set-canonical-peer.ts  test-solana-transfer.ts  unpause-contract.ts  upgrade-playbook.md
deployment/test/: test-transfer.ts
evm/: Dockerfile  foundry.toml  package.json  solc2bindings.ts  tsconfig.json
evm/src/: Tbr.sol  TbrDispatcher.sol  UseProxy.sol
evm/src/assets/: TbrBase.sol  (+5 more)
evm/test/: Base.t.sol  ConfigTest.t.sol  Dispatcher.t.sol  DispatcherComponents.t.sol  Governance.t.sol  OracleIntegration.t.sol  User.t.sol
sdk/: package.json  tsconfig.json
sdk/common/: common.tgz  index.ts  package.json  tsconfig.json
sdk/evm/: README.md  evm-transfer.tgz  package.json  package.tgz  tsconfig.build.json  tsconfig.json
sdk/solana/: Makefile  index.ts  package.json  solana-transfer.tgz  tsconfig.json
sdk/src/: index.ts
sdk/sui/: package.json  tsconfig.build.json  tsconfig.json
solana/: Anchor.toml  package.json  tsconfig.json
solana/programs/token-bridge-relayer/: Cargo.toml  build.rs  generate-idl.sh  network.json  test-program-keypair.json
solana/programs/token-bridge-relayer/src/: constants.rs  error.rs  id.rs  lib.rs  message.rs  utils.rs
solana/programs/token-bridge-relayer/src/processor/: admins.rs  chain_config.rs  config.rs  inbound.rs  initialize.rs  mod.rs  outbound.rs  owner.rs  peers.rs  queries.rs  roles.rs
solana/programs/token-bridge-relayer/src/state/: admin.rs  auth.rs  chain.rs  config.rs  foreign_contract.rs  mod.rs  sender.rs  signer_sequence.rs  wormhole.rs
solana/tests/: oracle-program-keypair.json  package.json  token-bridge-relayer-tests.ts  token-bridge-relayer.ts  tsconfig.json  utils-assert.ts  utils.ts
sui/: Move.toml  package.json
sui/sources/: admin.move  chain_state.move  inbound.move  message.move  outbound.move  owner.move  peer.move  setup.move  state.move  tbrv3.move
sui/tests/: tbrv3_tests.move
(+214 files in other folders)
