[package]
name = "token-bridge-relayer"
version = "3.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_bridge_relayer"

[features]
default = ["solana-price-oracle/cpi", "solana-devnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "wormhole-anchor-sdk/idl-build",
]

# Environments
mainnet = ["solana-price-oracle/mainnet", "wormhole-anchor-sdk/mainnet"]
solana-devnet = [
    "solana-price-oracle/solana-devnet",
    "wormhole-anchor-sdk/solana-devnet",
]
tilt-devnet = ["solana-price-oracle/tilt-devnet"]

[dependencies]
cfg-if = "1"
anchor-lang = { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "8d52c1c", features = [
    "init-if-needed",
] }
anchor-spl = { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "8d52c1c" }

#solana-price-oracle = { git = "ssh://git@github.com/XLabs/relayer-infra-contracts/", branch = "main" }
solana-price-oracle = { path = "../../../lib/relayer-infra-contracts/src/solana/programs/price-oracle" }

#wormhole-anchor-sdk = { git = "https://github.com/wormhole-foundation/wormhole-scaffolding.git", rev = "1acd10e3cbeea0df06976b606bd24da2e8e849e1", features = ["token-bridge"] }
wormhole-anchor-sdk = { git = "https://github.com/real-felix/wormhole-scaffolding.git", branch = "bump-anchor", default-features = false, features = [
    "solana-devnet",
    "token-bridge",
] }
#wormhole-anchor-sdk = { path = "../../../../wormhole-scaffolding/solana/modules/wormhole-anchor-sdk/", features = ["token-bridge"] }
#wormhole-solana-utils = { version = "0.3.0-alpha.1", features = ["anchor"]}

wormhole-io = "0.1"
