[package]
name = "token-bridge-relayer"
version = "3.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_bridge_relayer"

[features]
default = ["solana-price-oracle/cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "wormhole-anchor-sdk/idl-build",
]
# Networks:
mainnet = ["solana-price-oracle/mainnet", "wormhole-anchor-sdk/mainnet"]
testnet = ["solana-price-oracle/testnet", "wormhole-anchor-sdk/solana-devnet"]

[dependencies]
cfg-if = "1"
anchor-lang = { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "06527e57c3e59683c36eb0a5c69ee669100b42e5", features = [
    "init-if-needed",
] }
anchor-spl = { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "06527e57c3e59683c36eb0a5c69ee669100b42e5" }

solana-price-oracle = { path = "../../../lib/relayer-infra-contracts/src/solana/programs/price-oracle" }

wormhole-anchor-sdk = { git = "https://github.com/wormhole-foundation/wormhole-scaffolding.git", default-features = false, features = [
    "solana-devnet",
    "token-bridge",
] }

wormhole-io = "0.1"

[build-dependencies]
serde = "1"
serde_json = "1"
anyhow = "1"
ed25519-dalek = "1.0.1" # Same as in the Solana dependencies
bs58 = "0.5.1"
